Add system test